--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -2,6 +2,6 @@ p#notice = notice
 
 h1 = @item.name
 
-= link_to 'Edit', [@item.company, @item], action: :edit
+= link_to 'Edit', [@item.supplier, @item], action: :edit
 '  |
-= link_to 'Back', [@item.company, @item], action: :index
+= link_to 'Back', [@item.supplier, @item], action: :index
