--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,17 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with(model: resource, scope: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+  <% if resource.respond_to?(:user) %>
+    <% resource.build_user %>
+    <%= f.fields_for :user do |ff| %>
+      <div class="field">
+        <%= ff.label :name %><br />
+        <%= ff.text_field :name, autofocus: true %>
+      </div>
+    <% end %>
+  <% end %>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -30,5 +35,3 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
