--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,21 @@
 <h2>Sign up</h2>
 
-<%= form_with(model: resource, scope: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with(model: resource, url: registration_path(resource_name), local: true) do |f| %>
   <%= devise_error_messages! %>
 
   <% if resource.respond_to?(:user) %>
-    <% resource.build_user %>
+    <% resource.build_user if resource.user.nil? %>
     <%= f.fields_for :user do |ff| %>
       <div class="field">
         <%= ff.label :name %><br />
-        <%= ff.text_field :name, autofocus: true %>
+        <%= ff.text_field :name, id: :account_user_attributes_name, autofocus: true %>
       </div>
     <% end %>
   <% end %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email, id: :account_email %>
   </div>
 
   <div class="field">
@@ -23,12 +23,12 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, id: :account_password, autocomplete: "off" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, id: :account_password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="actions">
