Add Companies snippet to User#show view

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,3 +4,9 @@
   p Last login #{time_ago_in_words(@user.account.last_sign_in_at)} ago
 
 .company_index
+  h2 Companies
+  - user.companies.each do |company|
+    .company_snippet
+      h3.company_name #{company.name}
+      p.company_city  #{company.city}
+      p.company_size  #{pluralize(company.users.count, 'staff member')}
