Build user profile page (UI)

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,10 +6,12 @@ html
 
     = stylesheet_link_tag    'application', 'data-turbolinks-track': 'reload', media: 'all'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = yield :vue
   body
     header
+      ul#flash
       - flash.each do |type, msg|
-        p[class=type] #{msg}
+        li[class=type] #{msg}
       = render 'shared/nav'
     = yield
     footer
