--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,9 +5,8 @@ html
     = csrf_meta_tags
     = include_gon
 
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-
+    = stylesheet_link_tag    "application", "data-turbolinks-track": "reload", media: "all"
+    = javascript_include_tag 'application', "data-turbolinks-track": "reload"
   body
     header
       - flash.each do |type, msg|
