Add nav menu to application layout

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html
     = javascript_include_tag 'application', "data-turbolinks-track": "reload"
   body
     header
+      = render "shared/nav"
       - flash.each do |type, msg|
          p[class=type] #{msg}
     = yield
