Implement add company form on Users profile page

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,11 @@
-.user_details
-  h2.user_name #{@user.name}
-  p.user_email #{@user.email}
+#user_details
+  h2#user_name #{@user.name}
+  p#user_email #{@user.email}
   p Last login #{time_ago_in_words(@user.account.last_sign_in_at)} ago
 
-.company_index
+#company_index
+  - if @user.companies.any?
+    = render partial: 'companies/snippet', collection: @user.companies, as: :company
+
+#add_company
+  = render 'add_company_form'
