--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
   body
     header
       = render "shared/nav"
+    #flash
       - flash.each do |type, msg|
-         p[class=type] #{msg}
+        p[id="#{type}"] #{msg}
     = yield
