--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require jquery-ui/autocomplete
  */
+
+.hidden { display: none; }
+.ui-helper-hidden-accessible { display: none; }
