--- a/app/views/companies/_form.html.slim
+++ b/app/views/companies/_form.html.slim
@@ -1,17 +1,14 @@
-= form_for @company do |f|
-  - if @company.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@company.errors.count, "error")} prohibited this company from being saved:"
-      ul
-        - @company.errors.full_messages.each do |message|
-          li = message
+button #{action}
+- @company ||= Company.new
+
+= form_with model: @company do |f|
 
   .field
-    = f.label 'Name'
+    = f.label 'Company Name'
     = f.text_field :name
 
   .field
-    = f.label 'Code'
+    = f.label 'Shortcode'
     = f.text_field :code
 
   .field
@@ -22,4 +19,6 @@
     = f.label 'City'
     = f.text_field :city
 
-  .actions = f.submit
+  .actions
+    = f.submit
+    button Cancel
