--- a/app/views/companies/_snippet.html.slim
+++ b/app/views/companies/_snippet.html.slim
@@ -1,3 +1,3 @@
 .company_snippet
-  h3.company_name #{company.name} (#{company.code})
+  h3.company_name = link_to "#{company.name} (#{company.code})", company
   p.company_city #{company.city}
