--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -1,8 +1,24 @@
-p#notice = notice
+#company_overview[data-resource="company"]
+  = render "companies/overview"
 
-h1 = @company.name
+#join_company
+  = render "companies/join_button"
 
+/ Inventory --------------------------------------------------------------------
+- if current_user.is_purchaser?(@company) || current_user.belongs_to?(@company)
+  #inventory_overview[data-resource="item"]
+    = render partial: "items/overview"
 
-= link_to 'Edit', edit_company_path(@company)
-'  |
-= link_to 'Back', companies_path
+/ Supply Links -----------------------------------------------------------------
+- if current_user.belongs_to?(@company)
+  #supply_link_index
+    #purchasers_overview
+      = render partial: "supply_links/overview", locals: { role: :purchaser }
+
+    #suppliers_overview
+      = render partial: "supply_links/overview", locals: { role: :supplier }
+
+/ Members ----------------------------------------------------------------------
+- if current_user.is_admin?(@company)
+  #members_overview
+    = render "companies/member_overview"
