--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
 
     = stylesheet_link_tag    "application", "data-turbolinks-track": "reload", media: "all"
     = javascript_include_tag 'application', "data-turbolinks-track": "reload"
-  body
+  body[data-controller=controller_path data-action=action_name]
     header
       = render "shared/nav"
     #flash
