--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,11 +1,11 @@
 ul
   - if user_signed_in?
     li = link_to "Your Profile", user_path
-    - if current_user.companies.any?
+    - if current_user.confirmed_companies.any?
       li
         | Your Companies
         ul#nav__companies
-          = render partial: 'companies/li', collection: current_user.companies, as: :company
+          = render partial: 'companies/li', collection: current_user.confirmed_companies, as: :company
     hr
     li Settings
     li = link_to "Sign Out", destroy_account_session_path, method: :delete
