--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,11 +1,5 @@
-#user_details
-  h2#user_name #{@user.name}
-  p#user_email #{@user.email}
-  p Last login #{time_ago_in_words(@user.account.last_sign_in_at)} ago
+#user_overview[data-resource="user"]
+  = render "overview"
 
-#company_index
-  - if @user.companies.any?
-    = render partial: 'companies/snippet', collection: @user.companies, as: :company
-
-#add_company
-  = render 'add_company_form'
+#company_overview[data-resource="company"]
+  = render "company_overview"
