Add Place Order functionality

--- a/app/views/companies/_member_overview.html.slim
+++ b/app/views/companies/_member_overview.html.slim
@@ -2,7 +2,7 @@ h2 Members
 #pending_commitment_summary
   = render "companies/pending_commitment_summary"
 ul#member_index.form_rendered
-  = render partial: 'companies/member_snippet',
+  = render partial: "companies/member_snippet",
            collection: @company.confirmed_members,
            as: :member
 #add_member.form_container
