Implement order reports, add header CSS v1

--- a/app/views/companies/_item_overview.html.slim
+++ b/app/views/companies/_item_overview.html.slim
@@ -1,6 +1,6 @@
 h2 Inventory
 p#inventory_size
-  = render partial: "items/count", object: @company, as: :company
+  = render partial: "companies/item_count"
 
 #item_list.form_rendered
   = render partial: "items/snippet", collection: @company.items, as: :item
