--- a/app/views/users/_overview.html.slim
+++ b/app/views/users/_overview.html.slim
@@ -1,8 +1,8 @@
 #user_details.form_rendered
-  = render 'details'
+  = render partial: "users/details"
 
 #edit_user.form_container
-  = render 'form'
+  = render partial: "users/form"
 
 p#user_email #{@user.email}
 p Last login #{time_ago_in_words(@user.account.last_sign_in_at)} ago
