--- a/app/views/companies/searches/_form.html.slim
+++ b/app/views/companies/searches/_form.html.slim
@@ -1,10 +1,8 @@
 .form_container
   button Find a Company
   = form_with url: companies_search_path, class: "ui-front" do |f|
-    .field
-      = f.text_field :q, class: "ui-autocomplete-input", placeholder: "Search"
-      = f.hidden_field :id
+    = f.submit "Go", class: :hidden
+    button Cancel
 
-    .actions
-      = f.submit "Go"
-      button Cancel
+    = f.text_field :q, class: "ui-autocomplete-input", placeholder: "Search"
+    = f.hidden_field :id
