--- a/app/views/items/_form.html.slim
+++ b/app/views/items/_form.html.slim
@@ -1,6 +1,8 @@
+- @item ||= Item.new
+- @company ||= @item.company
+
 button #{action}
-- item ||= Item.new
-= form_with model: [@company, item] do |f|
+= form_with model: [@company, @item] do |f|
   .field
     = f.label 'Item Name'
     = f.text_field :name
