--- a/app/views/companies/_company_request_index.html.slim
+++ b/app/views/companies/_company_request_index.html.slim
@@ -1,5 +1,5 @@
 - if @company.requests_pending_member.any?
   p
-    ' #{pluralize(@company.requests_pending_member.count, "request")}
+    ' #{pluralize(@company.requests_pending_member.count, "invitation")}
     ' awaiting user confirmation
     ' (#{@company.requests_pending_member.map(&:user).map(&:name).join(", ")})
