--- a/app/views/items/_details.html.slim
+++ b/app/views/items/_details.html.slim
@@ -1,8 +1,8 @@
-- @item ||= item
+- item ||= @item
 
 h3#item_name
-  ' #{@item.name}
-  - unless @item.ref_code.blank?
-    | (#{@item.ref_code})
-p#item_price #{@item.price}元
-p#item_unit_size #{@item.unit_size}
+  ' #{item.name}
+  - unless item.ref_code.blank?
+    | (#{item.ref_code})
+p#item_price #{item.price}元
+p#item_unit_size #{item.unit_size}
