--- a/app/views/orders/_purchaser.html.slim
+++ b/app/views/orders/_purchaser.html.slim
@@ -1,3 +1,3 @@
-div.purchaser[data-id="#{purchaser.id}" \
+a.purchaser[data-id="#{purchaser.id}" \
               data-suppliers="#{purchaser.suppliers.pluck(:id).join(",")}"]
-  a #{purchaser.name}
+  | #{purchaser.name}
