--- a/app/views/shared/nav/_company_search.html.slim
+++ b/app/views/shared/nav/_company_search.html.slim
@@ -1,7 +1,7 @@
 .form_container
   button Find a Company
   = form_with url: companies_search_path, class: "ui-front" do |f|
-    = f.submit class: :hidden
+    = f.submit "Go", class: :hidden
     button Cancel
 
     = f.text_field :q, class: "ui-autocomplete-input", placeholder: "Search"
