--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -346,10 +346,9 @@ header {
 }
 
 #splash {
-  margin-left: -4rem;
-  margin-right: -4rem;
-  margin-top: -2rem;
+  margin: -2rem -4rem;
   padding: 2rem 4rem;
+  height: 100%;
   background-color: hsl(9, 70%, 35%);
   color: #fff;
 
