--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -154,7 +154,7 @@ header {
       height: 2rem;
       line-height: 2rem;
       background-size: 2rem;
-      background-image: url("/assets/bodega.svg");
+      background-image: asset-url('bodega.svg');
       background-position: left;
       background-repeat: no-repeat;
       margin-right: 1rem;
