Add github link to footer

--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,1 +1,3 @@
-| © #{Date.today.year} Ryan Lue
+' © #{Date.today.year} Ryan Lue.
+' #{link_to "Source code", "https://github.com/rlue/bodega"}
+' available under the MIT License.
